[gd_scene load_steps=2 format=2]

[ext_resource path="res://scene/test/test_network_interface.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="mora" type="Button" parent="."]
margin_left = 123.0
margin_top = 70.0
margin_right = 135.0
margin_bottom = 90.0
rect_scale = Vector2( 2, 2 )
text = "mora"

[node name="move" type="Button" parent="."]
margin_left = 123.0
margin_top = 143.0
margin_right = 171.0
margin_bottom = 163.0
rect_scale = Vector2( 2, 2 )
text = "move"

[node name="match" type="Button" parent="."]
margin_left = 123.0
margin_top = 220.0
margin_right = 175.0
margin_bottom = 240.0
rect_scale = Vector2( 2, 2 )
text = "match"

[node name="begin" type="Button" parent="."]
margin_left = 123.0
margin_top = 302.0
margin_right = 175.0
margin_bottom = 322.0
rect_scale = Vector2( 2, 2 )
text = "begin"

[connection signal="button_down" from="mora" to="." method="_on_mora_button_down"]
[connection signal="button_down" from="move" to="." method="_on_move_button_down"]
[connection signal="button_down" from="match" to="." method="_on_match_button_down"]
[connection signal="button_down" from="begin" to="." method="_on_begin_button_down"]
